Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38710

SIGSEGV when running animatedtiles example on directfb platform

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.2.0
    • QPA: DirectFB
    • None
    • TI AM1808 platform
      directfb platform plugin

      When running the animatedtiles example on TI AM1808 platform with directfb platform plugin, the application crashes with a segmentation fault. The crash is not systematic, but was easy to reproduce on the board.

      The segmentation fault happens usually just after "Thread: Destroyed while thread is still running".
      The Qthread in question is monitoring directfb input. Its initialization is performed twice at runtime and the existence of the Qthread is not tested before reseting the QScopedPointer handling the Qthread.

      Stopping the thread before reseting the QScopedPointer in QDirectFbIntegration::initializeInput() is the workaround I have implemented for now.

        1. animatedtiles_gdb.log
          5 kB
          Lucile Quirion
        2. animatedtiles_output.log
          2 kB
          Lucile Quirion
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            rve Anders Bakken
            lquirion Lucile Quirion
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes