src/plugins/platforms/directfb/qdirectfbintegration.h
@@ -60,7 +60,7 @@ public:
     QDirectFbIntegration();
     ~QDirectFbIntegration();
 
-    void initialize();
+    void connectToDirectFb();
 
     QPlatformPixmap *createPlatformPixmap(QPlatformPixmap::PixelType type) const;
     QPlatformWindow *createPlatformWindow(QWindow *window) const;
